2008-06-22  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

Reviewed by Darin Adler.

        Fix https://bugs.webkit.org/show_bug.cgi?id=19465
        Bug 19465: Cursor sometimes gets 'stuck' in textareas when trying to navigate with arrow keys

        Test: editing/input/textarea-arrow-navigation.html

        * rendering/RenderText.cpp:
        (WebCore::RenderText::positionForCoordinates): In the case when the next position is to the right
        of the last text box but the text offset is 0, set the affinity to DOWNSTREAM instead of UPSTREAM so
        that the cursor doesn't remain on the previous line.


Canonical link: https://commits.webkit.org/27183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34735 268f45cc-cd09-0410-ab3c-d52691b4dbfc